chore: set up backend project structure with Docker, PostgreSQL, and FastAPI

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-DB_NAME=aica_thesis
-DB_USER=jepoyqt
-DB_PASSWORD=hidalgo001
-DB_PORT=5432
+POSTGRES_USER=jepoyqt
+POSTGRES_PASSWORD=hidalgo001
+POSTGRES_SERVER=postgres
+POSTGRES_DB=aicadb
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_SERVER}:5432/${POSTGRES_DB}"
+
+SECRET_KEY=a_very_secret_key_for_jwt_that_is_long_and_random
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
