--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,34 @@
 services:
-  db:
-    image: postgres:alpine
-    container_name: postgres
-    restart: always
+  postgres:
+    image: postgres:16-alpine
+    container_name: aica_postgres
     environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-    ports:
-      - ${DB_PORT}:5432
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d $${DB_NAME} -U $${DB_USER}"]
-      interval: 10s
-      timeout: 30s
-      retries: 5
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
-      - ./data/db:/var/lib/postgresql/data
-    attach: false
-
-  adminer:
-    image: adminer
-    restart: always
+      - postgres_data:/var/lib/postgresql/data
     ports:
-      - 8080:8080
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  api:
+    build: .
+    container_name: aica_api
+    env_file:
+      - .env
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./src:/app/src
+    command: uvicorn aica-backend.api.main:app --host 0.0.0.0 --port 8000 --reload
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+volumes:
+  postgres_data:
