--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - "8000:8000"
     volumes:
       - ./src:/app/src
-    command: uvicorn aica-backend.api.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn aica_backend.api.main:app --host 0.0.0.0 --port 8000 --reload
     depends_on:
       postgres:
         condition: service_healthy
