--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_SERV
 SECRET_KEY=a_very_secret_key_for_jwt_that_is_long_and_random
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+REDIS_URL=redis://redis:6379/0
+CRAWL4AI_API_KEY=""
