chore: update Docker configuration, enhance onboarding forms, and improve data handling; add CertificateCard and SkillsCard components

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-POSTGRES_USER=jepoyqt
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=hidalgo001
 POSTGRES_SERVER=postgres
 POSTGRES_DB=aicadb
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_SERVER}:5432/${POSTGRES_DB}"
+POSTGRES_PORT=5432
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_SERVER}:${POSTGRES_PORT}/${POSTGRES_DB}"
 
 SECRET_KEY=a_very_secret_key_for_jwt_that_is_long_and_random
 ALGORITHM=HS256
