--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,13 @@
+.git
+.gitignore
+
 __pycache__/
 *.pyc
-node_modules/
-.env
+*.pyo
+*.pyd
+.pytest_cache/
+.venv/
+venv/
+
+aica_frontend/node_modules/
+aica_frontend/.next/
