--- a/.env
+++ b/.env
@@ -11,4 +11,21 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 REDIS_URL=redis://redis:6379/0
 CRAWL4AI_API_KEY=""
-GROQ_API_KEY=""
+
+
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL_NAME=llama3:latest
+OLLAMA_TIMEOUT=120
+
+EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
+EMBEDDING_DIMENSION=768
+VECTOR_SIMILARITY_THRESHOLD=0.75
+SCRAPING_BATCH_SIZE=50
+
+MAX_RETRIES=3
+RETRY_DELAY=60
+PIPELINE_TIMEOUT=3600
+
+LOG_LEVEL=INFO
+ENABLE_METRICS=true
+ALERT_WEBHOOK_URL=
