chore: Refactor scraping and embedding services; implement OLLAMA integration for job data extraction; enhance configuration and logging; add new pipeline orchestration and testing scripts

--- a/.env
+++ b/.env
@@ -10,8 +10,7 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 REDIS_URL=redis://redis:6379/0
-CRAWL4AI_API_KEY=""
-
+CRAWL4AI_API_KEY=
 
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL_NAME=llama3:latest
@@ -26,6 +25,16 @@ MAX_RETRIES=3
 RETRY_DELAY=60
 PIPELINE_TIMEOUT=3600
 
+LOG_LEVEL=INFO
+ENABLE_METRICS=true
+ALERT_WEBHOOK_URL=
+
+EMBEDDING_DIMENSION=384
+VECTOR_SIMILARITY_THRESHOLD=0.75
+SCRAPING_BATCH_SIZE=100
+MAX_RETRIES=3
+RETRY_DELAY=60
+PIPELINE_TIMEOUT=3600
 LOG_LEVEL=INFO
 ENABLE_METRICS=true
 ALERT_WEBHOOK_URL=
