chore: Update environment configuration; enhance security settings and add new parameters for session management and file uploads

--- a/.env.example
+++ b/.env.example
@@ -5,36 +5,74 @@ POSTGRES_DB=your_database_name
 POSTGRES_PORT=5432
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_SERVER}:${POSTGRES_PORT}/${POSTGRES_DB}"
 
-SECRET_KEY=generate_a_long_random_secret_key_here
+
+SECRET_KEY=generate_a_very_long_secure_secret_key_minimum_64_characters_here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# Password Security Settings
+MIN_PASSWORD_LENGTH=8
+MAX_PASSWORD_LENGTH=128
+REQUIRE_SPECIAL_CHARS=true
+PASSWORD_HASH_ROUNDS=12
+
+# Session Security
+SESSION_TIMEOUT_MINUTES=480
+MAX_LOGIN_ATTEMPTS=5
+LOCKOUT_DURATION_MINUTES=15
 
 REDIS_URL=redis://redis:6379/0
+RATE_LIMIT_PER_MINUTE=60
+RATE_LIMIT_PER_HOUR=1000
+BURST_RATE_LIMIT=100
+
 
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL_NAME=llama3:latest
 OLLAMA_TIMEOUT=120
 
+
 EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
 EMBEDDING_DIMENSION=768
 VECTOR_SIMILARITY_THRESHOLD=0.75
-SCRAPING_BATCH_SIZE=50
+
 
 MAX_RETRIES=3
 RETRY_DELAY=60
 PIPELINE_TIMEOUT=3600
 
-# Monitoring & Logging
+
+ALLOWED_ORIGINS=["http://localhost:3000","http://127.0.0.1:3000"]
+ALLOWED_HOSTS=["localhost","127.0.0.1","0.0.0.0"]
+
+# Content Security Policy
+CSP_POLICY="default-src 'self'"
+HSTS_MAX_AGE=31536000
+
+
+ENVIRONMENT=development
+
+
+DEBUG=true
+DOCS_ENABLED=true
+REDOC_ENABLED=true
+SECURE_COOKIES=false  # Auto-set to true in production
+FORCE_HTTPS=false     # Auto-set to true in production
+
+MAX_FILE_SIZE=5242880  # 5MB in bytes
+ALLOWED_FILE_TYPES=["image/jpeg","image/png","image/webp"]
+UPLOAD_SCAN_ENABLED=true
+
 LOG_LEVEL=INFO
 ENABLE_METRICS=true
+ENABLE_AUDIT_LOG=true
 ALERT_WEBHOOK_URL=your_webhook_url_here
 
-# Security Settings
-SECURE_COOKIES=false
-RATE_LIMIT_PER_MINUTE=60
-MAX_FILE_SIZE=5242880
-ALLOWED_FILE_TYPES=["image/jpeg", "image/png", "image/webp"]
+CRAWL4AI_API_KEY=your_crawl4ai_api_key_here
 
-# Environment
-ENVIRONMENT=development
-ALLOWED_ORIGINS=["http://localhost:3000"]
+DEV_TEST_EMAIL=dev@aica.local
+DEV_TEST_PASSWORD=DevTest123!
+
+DEV_BYPASS_RATE_LIMITING=false
+DEV_MOCK_EXTERNAL_APIS=false
