feat: Implement CRUD operations for job postings, user management, and profile updates, including JobCRUD and UserCRUD classes with security enhancements, profile handling for skills and credentials, a base scraping provider with factory pattern, session management, removal of obsolete storage and worker tasks, frontend updates for job matches and saved jobs, and refactored scraping tests to match the new service structure.

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,5 +22,28 @@ gevent
 crawl4ai
 sentence-transformers
 langchain
-sentence-transformers
 pgvector
+
+# AI/ML Dependencies
+numpy
+faiss-cpu
+spacy
+scikit-learn
+nltk
+
+# Text Processing
+beautifulsoup4
+lxml
+html5lib
+unicodedata2
+
+# HTTP and Scraping
+requests
+httpx
+aiohttp
+selenium
+
+# Utilities
+python-dateutil
+pytz
+tqdm
