feat: Implement scraping pipeline monitoring and job matching service with modules for tracking pipeline runs, managing execution, and evaluating job-user compatibility, including dummy data generation, comprehensive AI-related testing, restructuring matching logic into matching_service.py, and temporarily disabling pgvector import in models.

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,10 @@ gevent
 crawl4ai
 sentence-transformers
 langchain
+langchain-community
+langchain-huggingface
+langchain-experimental
+ollama
 pgvector
 
 # AI/ML Dependencies
