refactor: Update dependencies and improve authentication flow with enhanced logging, error handling, and CORS validation, while adding JobRepository and ProfileRepository, new config settings for login security, prompt templates for LLM operations, refining RAG pipeline and scraping service imports, improving date validation, cleaning up frontend error states, and strengthening AuthContext and HttpClient token handling.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,322 @@
-# Core Web Framework
-fastapi
-uvicorn[standard]
-
-# Database
-sqlalchemy
-psycopg2-binary
-pgvector
-
-# Data Validation
-pydantic
-pydantic-settings
-pydantic[email]
-
-# Authentication & Security
-python-jose[cryptography]
-passlib[bcrypt]
-bcrypt
-
-# HTTP Clients
-httpx
-aiohttp
-requests
-
-# Web Scraping
-beautifulsoup4
-crawl4ai
-lxml
-
-# AI/ML Core
-sentence-transformers
-numpy
-ollama
-
-# LangChain for RAG
-langchain
-langchain-community
-
-# Vector Storage
-faiss-cpu
-
-# Utilities
-python-dotenv
-python-multipart
-python-dateutil
-pytz
-tqdm
-slowapi
-redis
-celery[redis]
+agate==1.9.1
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.4.0
+aiosqlite==0.21.0
+alphashape==1.3.1
+altair==5.5.0
+amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.9.0
+argcomplete==3.6.2
+argon2-cffi==25.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asn1crypto==1.5.1
+asttokens==3.0.0
+async-lru==2.0.5
+asyncpg==0.30.0
+attrs==25.3.0
+babel==2.17.0
+bcrypt==3.2.0
+beautifulsoup4==4.13.4
+billiard==4.2.1
+bleach==6.2.0
+blinker==1.9.0
+blis==1.3.0
+boto3==1.35.77
+botocore==1.35.99
+Brotli==1.1.0
+cachetools==6.1.0
+catalogue==2.0.10
+celery==5.5.3
+certifi==2025.8.3
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.2
+click==8.2.1
+click-didyoumean==0.3.1
+click-log==0.4.0
+click-plugins==1.1.1.2
+click-repl==0.3.0
+cloudpathlib==0.21.1
+cohere==5.17.0
+colorama==0.4.6
+comm==0.2.2
+confection==0.1.5
+Crawl4AI==0.7.4
+cryptography==44.0.3
+cssselect==1.3.0
+cymem==2.0.11
+daff==1.4.2
+dataclasses-json==0.6.7
+dbt-adapters==1.14.8
+dbt-common==1.24.0
+dbt-core==1.8.9
+dbt-extractor==0.6.0
+dbt-semantic-interfaces==0.5.1
+dbt-snowflake==1.9.0
+debugpy==1.8.15
+decorator==5.2.1
+deepdiff==7.0.1
+defusedxml==0.7.1
+Deprecated==1.2.18
+distro==1.9.0
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+executing==2.2.0
+faiss-cpu==1.11.0.post1
+fake-http-header==0.3.5
+fake-useragent==2.2.0
+Faker==19.3.0
+fastapi==0.116.1
+fastavro==1.12.0
+fastjsonschema==2.21.1
+feedparser==6.0.11
+filelock==3.18.0
+fqdn==1.5.1
+frozenlist==1.7.0
+fsspec==2025.5.1
+gevent==25.5.1
+git-filter-repo==2.47.0
+gitdb==4.0.12
+GitPython==3.1.45
+greenlet==3.2.3
+h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
+html5lib==1.1
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.34.4
+humanize==4.12.3
+hyperframe==6.1.0
+idna==3.10
+importlib-metadata==6.11.0
+ipykernel==6.29.5
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+isodate==0.6.1
+isoduration==20.11.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.10.0
+jmespath==1.0.1
+joblib==1.5.1
+json5==0.12.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+jupyter-events==0.12.0
+jupyter-lsp==2.2.6
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyter_server==2.16.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.4
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+keyring==25.6.0
+kombu==5.5.4
+langchain==0.3.26
+langchain-cohere==0.4.5
+langchain-community==0.3.27
+langchain-core==0.3.74
+langchain-experimental==0.3.4
+langchain-huggingface==0.3.1
+langchain-ollama==0.3.7
+langchain-postgres==0.0.15
+langchain-text-splitters==0.3.8
+langcodes==3.5.0
+langsmith==0.4.4
+language_data==1.3.0
+lark==1.2.2
+leather==0.4.0
+limits==5.4.0
+litellm==1.74.0.post1
+Logbook==1.5.3
+lxml==5.4.0
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mashumaro==3.14
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+minimal-snowplow-tracker==0.0.2
+mistune==3.1.3
+more-itertools==10.7.0
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.6.3
+murmurhash==1.0.13
+mypy_extensions==1.1.0
+narwhals==2.1.2
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+notebook==7.4.4
+notebook_shim==0.2.4
+numpy==2.1.0
+ollama==0.5.3
+openai==1.93.1
+ordered-set==4.1.0
+orjson==3.10.18
+outcome==1.3.0.post0
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parsedatetime==2.6
+parso==0.8.4
+passlib==1.7.4
+patchright==1.52.5
+pathspec==0.12.1
+pgvector==0.3.6
+pillow==10.4.0
+pinecone==7.3.0
+pinecone-plugin-assistant==1.7.0
+pinecone-plugin-interface==0.0.7
+pipx==1.7.1
+platformdirs==4.3.8
+playwright==1.53.0
+preshed==3.0.10
+prometheus_client==0.22.1
+prompt_toolkit==3.0.51
+propcache==0.3.2
+protobuf==5.29.4
+psutil==7.0.0
+psycopg==3.2.9
+psycopg-pool==3.2.6
+psycopg2-binary==2.9.10
+pure_eval==0.2.3
+pyarrow==20.0.0
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+pydeck==0.9.1
+pyee==13.0.0
+Pygments==2.19.2
+PyJWT==2.10.1
+pyOpenSSL==24.3.0
+pyperclip==1.9.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-jose==3.5.0
+python-json-logger==3.3.0
+python-multipart==0.0.20
+python-slugify==8.0.4
+pytimeparse==1.1.8
+pytz==2025.2
+pywin32==311
+pywin32-ctypes==0.2.3
+pywinpty==2.0.15
+PyYAML==6.0.2
+pyzmq==27.0.0
+rank-bm25==0.2.2
+redis==5.2.1
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==14.0.0
+rpds-py==0.25.0
+rsa==4.9.1
+rtree==1.4.1
+s3transfer==0.10.4
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.16.0
+selenium==4.34.2
+Send2Trash==1.8.3
+sentence-transformers==5.0.0
+setuptools==80.7.1
+sgmllib3k==1.0.0
+shapely==2.1.1
+shellingham==1.5.4
+six==1.17.0
+slowapi==0.1.9
+smart_open==7.3.0.post1
+smmap==5.0.2
+sniffio==1.3.1
+snowballstemmer==2.2.0
+snowflake-connector-python==3.12.4
+sortedcontainers==2.4.0
+soupsieve==2.7
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.42
+sqlparse==0.5.3
+srsly==2.5.1
+stack-data==0.6.3
+starlette==0.46.2
+streamlit==1.48.1
+sympy==1.14.0
+tenacity==9.1.2
+terminado==0.18.1
+text-unidecode==1.3
+tf-playwright-stealth==1.2.0
+thinc==8.3.6
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tinycss2==1.4.0
+tokenizers==0.21.2
+toml==0.10.2
+tomlkit==0.13.2
+torch==2.7.1
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.53.1
+trimesh==4.7.4
+trio==0.30.0
+trio-websocket==0.12.2
+typer==0.16.0
+types-python-dateutil==2.9.0.20250708
+types-PyYAML==6.0.12.20250822
+types-requests==2.32.4.20250809
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.14.1
+tzdata==2025.2
+unicodedata2==16.0.0
+uri-template==1.3.0
+urllib3==2.5.0
+userpath==1.9.2
+uvicorn==0.35.0
+vine==5.1.0
+wasabi==1.1.3
+watchdog==6.0.0
+watchfiles==1.1.0
+wcwidth==0.2.13
+weasel==0.4.1
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+wheel==0.45.1
+wrapt==1.17.2
+wsproto==1.2.0
+xxhash==3.5.0
+yarl==1.20.1
+zipp==3.21.0
+zope.event==5.1.1
+zope.interface==7.2
+zstandard==0.23.0
